2005-02-06  Mark Wielaard  <mark@klomp.org>

	Reported by Timo Lindfors <timo.lindfors@iki.fi>
	java/util/regex/Matcher.java (lookingAt): Set position when match
	found.
	(matches): Implemented through lookingAt().

2005-02-06  Mark Wielaard  <mark@klomp.org>

	Fix suggested by Timo Lindfors <timo.lindfors@iki.fi>
	* java/util/regex/Pattern.java (split(CharSequence,int)):
	Fix while empties > 0 loops.

2005-02-05  C. Brian Jones  <cbj@gnu.org>

	* gnu/java/rmi/registry/: Added back to classpath again, used by core
	library.
	* gnu/java/rmi/registry/RegistryImpl.java: ditto
	* gnu/java/rmi/registry/RegistryImpl_Skel.java: ditto
	* gnu/java/rmi/registry/RegistryImpl_Stub.java: ditto

2005-02-06  Mark Wielaard  <mark@klomp.org>

	* doc/api/Makefile.am (create_html): Remove gjdoc -public flag.

2005-02-05  Sven de Marothy  <sven@physto.se>

        * java/text/SimpleDateFormat.java
        (parse): Tweak handling of 2-year dates
        * java/util/Calendar.java
        (clear): Clear fields to correct value.
        * java/util/GregorianCalendar.java
        (computeTime): Correct handling of time zones.
        Correct field minimum values.

2005-02-05  C. Brian Jones  <cbj@gnu.org>

	* gnu/java/rmi/rmic/: added to cp-tools and removed from classpath
	* gnu/java/rmi/rmic/Compile_gcj.java: ditto
	* gnu/java/rmi/rmic/Compile_jikes.java: ditto
	* gnu/java/rmi/rmic/Compile_kjc.java: ditto
	* gnu/java/rmi/rmic/Compiler.java: ditto
	* gnu/java/rmi/rmic/CompilerProcess.java: ditto
	* gnu/java/rmi/rmic/RMICException.java: ditto
	* gnu/java/rmi/rmic/RMIC.java: ditto
	* gnu/java/rmi/rmic/TabbedWriter.java: ditto
	* gnu/java/rmi/registry/: added to cp-tools and removed from classpath
	* gnu/java/rmi/registry/RegistryImpl.java: ditto
	* gnu/java/rmi/registry/RegistryImpl_Skel.java: ditto
	* gnu/java/rmi/registry/RegistryImpl_Stub.java: ditto

2005-02-05  Mark Wielaard  <mark@klomp.org>

	* doc/api/Makefile.am (classpathbox): Use class logo and target _top.
